bugfix for customer details saving
all textboxes values are now assigned to Model values before call SaveAsync
-EndDate DatePicker on AddEntrance page are now disabled. EndDate is calculated automatically.

--- a/GymSystem.App/Views/AddEntranceToCustomer.xaml
+++ b/GymSystem.App/Views/AddEntranceToCustomer.xaml
@@ -61,6 +61,7 @@
             Date="{x:Bind ViewModel.EndDate, Mode=OneWay}"
             HorizontalAlignment="Left" 
             Margin="431,415,0,0" 
-            VerticalAlignment="Top"/>
+            VerticalAlignment="Top" 
+            IsEnabled="False"/>
     </Grid>
 </Page>
