--- a/GymSystem.App/Views/ViewDetails.xaml
+++ b/GymSystem.App/Views/ViewDetails.xaml
@@ -26,7 +26,7 @@
                 x:Name="mainCommandBar"
                 HorizontalAlignment="Stretch"
                 Background="Transparent">
-                <AppBarButton    Click="{x:Bind ViewModel.SaveAsync}"
+                <AppBarButton x:Name="SaveBtn"    Click="SaveBtn_Click"
                     Icon="Save" Visibility="{x:Bind ViewModel.IsInEdit, Mode=OneWay}"  
                     Label="Save"/>
                 <AppBarButton  
